syntax = "proto3";

package order;

import "base_types.proto";
import "order_types.proto";

service OrderService {
  rpc get_order(OrderRequest) returns (Order);
  rpc approve_order(ApprovalRequest) returns (Approval);
}

