syntax = "proto3";

package order;

import "google/protobuf/timestamp.proto";

message Product {
  sint32 id = 1;
  string cn = 2;
  int32 quantity = 3;
  string type = 4;
  string version = 5;
}

message Order {
  int64 order_id = 1;
  int32 region_id = 2;
  sint32 duration = 3;
  sint32 approval_step = 4;
  string contract_no = 5;
  google.protobuf.Timestamp start_at=6;
  google.protobuf.Timestamp end_at=7;
  int64 user_id = 8;
  repeated Compute computes = 9;
}

message Compute {
  sint32 idx = 1;
  repeated Product products = 2;
}

message OrderRequest {
  int64 order_id = 1;
  sint32 order_idx = 2;
}

message ApprovalRequest {
  int64 user_id = 1;
  string contract_code = 2;
  repeated Compute computes = 3;
}

message Approval {
  bool approved = 1;
}